Fix modal and hide scrollbar

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -21,18 +21,14 @@ a {
 a:hover {
   color: #535bf2;
 }
-html,
-body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
 body {
   margin: 0;
   display: block;
   place-items: unset;
   min-width: unset;
+}
+body::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
 }
 
 h1 {
